<resources>
    <string name="app_name">上海电气</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="remember_pass">记住密码</string>
    <string name="login">登陆</string>
    <string name="query">查询</string>
    <string name="cases">案例库</string>
    <string name="upload">上传</string>
    <string name="user">我</string>
    <string name="upload_photo">上传照片</string>
    <string name="more_choices"><u>更多查询选项</u></string>
    <string name="fuzzy_query">开启模糊查询</string>
    <string name="device">设备</string>
    <string name="component">部件</string>
    <string name="log_off">账户注销</string>
    <string name="plant">电厂名称</string>
    <string name="cases_name">案例名称</string>
    <string name="trouble_name">故障名称</string>
    <string name="information">设备信息</string>
    <string name="supplier">设备供应商</string>
    <string name="trouble_feature">故障特征</string>
    <string name="result_list">查询结果</string>
    <string name="trouble_diagnose">故障诊断</string>
    <string name="cases_query">案例查询</string>
    <string name="trouble">故障</string>
    <string name="upload_ch">上传</string>
    <string name="cases_time">案例时间</string>
    <string name="handle_people">处理人</string>
    <string name="arrange_people">整理人</string>
    <string name="contact">联系方式</string>
    <string name="department">所在部门</string>
    <string name="review_people">审核人</string>
    <string name="illustrate">使用说明</string>
    <string name="change_password">修改密码</string>
    <string name="authority">我的权限？</string>
    <string name="help">帮助</string>
    <string name="trouble_number">编号</string>
    <string name="trouble_description">描述</string>
    <string name="influence_factor">影响因子</string>
    <string name="more">更多</string>
    <string name="hang_up">收起</string>
    <string name="explain">说明</string>
    <string name="number">序号</string>
    <string name="trouble_reason">故障原因</string>
    <string name="handle_method">处理方法</string>
    <string name="url">http://192.168.0.104:8080</string>
    <string name="primary_path">/D1</string>
    <string name="rule_path">/rule</string>
    <string name="cases_path">/cases</string>
    <string name="factor">影响因子</string>
    <string name="more_word">其他关键词</string>
    <string name="loading">加载中...</string>
</resources>
