<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/split_line" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/trouble_diagnose"
            android:padding="10dp"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:id="@+id/query_device_tag"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/device"/>
        <Spinner
            android:id="@+id/query_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/component"/>
        <Spinner
            android:id="@+id/query_component"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/query_more_choices"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/more_choices"
            android:layout_margin="10dp"
            android:textColor="#0000ff"
            android:autoLink="all"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/is_fuzzy_query"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/fuzzy_query"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fuzzy_query_layout"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/fuzzy_query_text"
            android:background="@drawable/edit_shape"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:focusable="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/query_query"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button_shape"
            android:text="@string/query"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="20dp"/>
    </LinearLayout>
    <!--<ProgressBar-->
        <!--android:id="@+id/progress_bar_query"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:indeterminateDrawable="@drawable/progressbar"/>-->

</LinearLayout>