<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/cases_name"/>
                <EditText
                    android:id="@+id/upload_cases_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/trouble_name"/>
                <EditText
                    android:id="@+id/upload_trouble_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/cases_time"/>
                <EditText
                    android:id="@+id/upload_cases_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/handle_people"/>
                <EditText
                    android:id="@+id/upload_handle_people"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />

            <LinearLayout
                android:id="@+id/query_device_tag"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/information"/>
                <EditText
                    android:id="@+id/upload_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/supplier"/>
                <EditText
                    android:id="@+id/upload_supplier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/arrange_people"/>
                <EditText
                    android:id="@+id/query_arrange_people"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/contact"/>
                <EditText
                    android:id="@+id/upload_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/department"/>
                <EditText
                    android:id="@+id/upload_department"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/review_people"/>
                <EditText
                    android:id="@+id/upload_review_people"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/uploadPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/upload_photo"/>
                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    />

            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/cases_query"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/upload_ch"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:layout_margin="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>