<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/help"
            android:textSize="20sp" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/illustrate"
                android:gravity="center" />

            <Button
                android:id="@+id/illustrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="#00ffffff"
                android:gravity="start|center_vertical"
                android:text="@string/illustrate"
                android:textSize="20sp" />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/split_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/change_password"
                android:gravity="center" />

            <Button
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="#00ffffff"
                android:gravity="start|center_vertical"
                android:text="@string/change_password"
                android:textSize="20sp" />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/split_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/log_off"
                android:gravity="center" />

            <Button
                android:id="@+id/log_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="#00ffffff"
                android:gravity="start|center_vertical"
                android:text="@string/log_off"
                android:textSize="20sp" />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/split_line" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/my_authority"
            android:padding="15dp" />

        <TextView
            android:id="@+id/my_authority"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoLink="all"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingEnd="30dp"
            android:text="@string/authority"
            android:textColor="#0000ff" />

    </LinearLayout>
</LinearLayout>