<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/account"/>
        <com.shanghai_electric.shanghaielectric.customeLayout.OneKeyClearEditText
            android:id="@+id/account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:drawableRight="@drawable/ic_delete_01"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:gravity="left"
            android:textCursorDrawable="@drawable/cursor"
            app:deletecolor="@color/one_clear"
            />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/password"/>
        <com.shanghai_electric.shanghaielectric.customeLayout.OneKeyClearEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_delete_01"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/cursor"
            app:deletecolor="@color/one_clear"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginLeft="5dp"
            android:id="@+id/remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/remember_pass"/>
    </LinearLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="20dp"/>
    <!--<ProgressBar-->
        <!--android:id="@+id/progress_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:visibility="gone"-->
        <!--android:indeterminateDrawable="@drawable/progressbar"-->
        <!--/>-->


</LinearLayout>
