<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <!-- 底边tab -->

        <LinearLayout
            android:id="@+id/bottom_tab"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:baselineAligned="true">

            <RelativeLayout
                android:id="@+id/query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <ImageView
                    android:id="@+id/query_img"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/icon_off"
                    android:src="@drawable/query"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/query_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/query_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/query"
                    android:textColor="@color/icon_off"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <ImageView
                    android:id="@+id/cases_img"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/icon_off"
                    android:src="@drawable/cases"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/cases_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cases_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cases"
                    android:textColor="@color/icon_off"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <ImageView
                    android:id="@+id/upload_img"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/icon_off"
                    android:src="@drawable/upload"
                    android:contentDescription="@null" />


                <TextView
                    android:id="@+id/upload_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/upload_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/upload"
                    android:textColor="@color/icon_off"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <ImageView
                    android:id="@+id/user_img"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/icon_off"
                    android:src="@drawable/user"
                    android:contentDescription="@null" />


                <TextView
                    android:id="@+id/user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/user"
                    android:textColor="@color/icon_off"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- 内容部分， fragment切换 -->

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:layout_above="@+id/line"
            android:layout_alignParentTop="true"
            >
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/bottom_tab"
            android:background="@color/colorAccent" />
    </RelativeLayout>

</FrameLayout>